--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "RedditLang language support",
   "description": "Syntax highlighting for RedditLang",
   "version": "0.0.2",
+  "icon": "./icon.png",
   "repository": {
     "url": "https://github.com/elijah629/redditlang-vscode"
   },
